# api-gen

./: Cargo.toml
.cargo/: config.toml
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/business/: app_state.rs
app/src/business/server/: connection_establisher.rs  mod.rs  restartable.rs  server.rs
app/src/controller/: mod.rs  register.rs  registrations.rs
app/src/logging/: http_trace.rs  mod.rs  setup.rs
app/src/model/: error.rs  http_method.rs  mod.rs
app/src/model/internal/: mod.rs  request_json.rs
app/src/model/request/: registration_request.rs
app/src/model/response/: http_response.rs  mod.rs  registration_response.rs  server_registration.rs
app/src/util/: lock.rs  mod.rs  notifier.rs
app/tests/http/: mod.rs  request_sender.rs  util.rs
app/tests/http/register/: mod.rs  registrar.rs  registration_verifier.rs  test.rs
app/tests/test_double/: fake_connection_establisher.rs  mod.rs
src/: app_state.rs  lib.rs  main.rs
src/business/: app_state.rs  mod.rs  server.rs
src/business/server/: default_server.rs  mod.rs
src/controller/: register.rs  registrations.rs
src/logging/: http_trace.rs
src/model/: http_method.rs  mod.rs
src/model/internal/: mod.rs  request_json.rs
src/model/response/: http_response.rs
src/util/: lock.rs
tasks/: Cargo.toml
tasks/src/: main.rs
tasks/src/arguments/: mod.rs
tasks/src/task/: executable.rs  exit_status.rs  mod.rs  util.rs
tasks/src/task/tasks/: mod.rs  (+2 more)
tests/: main.rs
tests/http/: mod.rs  register_test.rs  request_sender.rs
tests/http/register/: mod.rs  registrar.rs  test.rs  util.rs
(+4 files in other folders)
