[package]
name = "api-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.6" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
http = { version = "1.4.0" }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { version = "0.1.43" }
tracing-subscriber = { version = "0.3.22" }

[dev-dependencies]
tower = { version = "0.5.2" }
